# w5/swagger/swagger.json
@@ -5,10 +5,10 @@
     "description": "API for CSE 341",
     "version": "1.0.0"
   },
-  "host": "localhost:8188",
+  "host": "https://wilding-cse-341.onrender.com",
   "basePath": "/",
   "schemes": [
-    "http"
+    "https"
   ],
   "components": {
     "schemas": {
